<resources>
    <string name="app_name">RollCall</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="register">Register</string>
    <string name="course_name">Course Name</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="class_room">CR</string>
    <string name="week">W1</string>
    <string name="enrollment_status_present">Present</string>
    <string name="enrollment_status_absent">Absent</string>
</resources>